Update and rename README.md to 0.READ_ME.md

--- a/0.READ_ME.md
+++ b/0.READ_ME.md
@@ -13,3 +13,5 @@ Connect to MySQL and to read SAS or SPSS data
 
 STATISTICAL DISTRIBUTIONS: normal (gaussian), poisson, binomial, t, F, Q-square, gamma, geometric, exponential, weibull, beta, multinomial, log-normal and logistic
 
+LINEAR REGRESSION
+LOGISTIC REGRESSION
